--- a/sportsee/src/scss/pages/profil.scss
+++ b/sportsee/src/scss/pages/profil.scss
@@ -38,5 +38,8 @@
         display: flex;
         flex-basis: 100%;
     }
+    .recharts-responsive-container {
+        background-color: red !important;
+    }
     
 }
