--- a/sportsee/src/scss/pages/profil.scss
+++ b/sportsee/src/scss/pages/profil.scss
@@ -6,6 +6,8 @@
     flex-wrap: wrap;
     width: 80%;
     height: 80vh;
+    column-gap: 20px;
+    justify-content: space-between;
     > h1 {
         display: flex;
         flex-basis: 100%;
@@ -18,28 +20,43 @@
             padding-left: 15px;
         }
     }
-    .daily-graph {
-        flex-basis: 60%;
-        height: 250px !important;
-        
-    }
-    .recharts-wrapper {
-        background-color: #FBFBFB;
-        padding: 80px 30px 40px 30px; 
-        position: relative;
-        bottom: 90px;
-    }
-    .recharts-surface {
-        height: 400px;
-        position: relative;
-        bottom: 50px;
-    }
-    .chart-container {
+    .charts-container {
+        margin-top: 30px;
         display: flex;
+        flex-wrap: wrap;
+        height: 70vh;
+        flex-basis: 75%;
+        justify-content: space-between;
+    }
+    .logo-list {
+        flex-basis: 20%;
+        background-color: pink;
+        height: 75vh;
+    }
+    .daily-graph {
+        border-radius: 5px;
         flex-basis: 100%;
+        height: 300px !important;
+        background-color: #FBFBFB
+        ;
     }
-    .recharts-responsive-container {
-        background-color: red !important;
+    .perf-graph {
+        border-radius: 5px;
+        flex-basis: 30%;
+        height: 250px !important; 
+        background-color: #282D30;         ;
     }
+    .average-session {
+        border-radius: 5px;
+        background-color: red;
+        flex-basis: 30%; 
+        height: 250px !important;
+    }
+   .score-chart {
+       border-radius:  5px;
+       height: 250px !important;
+       flex-basis: 30%;
+       background-color: #FBFBFB;
+   }
     
 }
