--- a/sportsee/src/scss/pages/profil.scss
+++ b/sportsee/src/scss/pages/profil.scss
@@ -24,19 +24,63 @@
         margin-top: 30px;
         display: flex;
         flex-wrap: wrap;
-        height: 70vh;
+        height: 65vh;
         flex-basis: 75%;
         justify-content: space-between;
+        row-gap: 35px;
     }
     .logo-list {
+        margin-top: 30px;
+        display: flex;
+        flex-wrap: wrap;
         flex-basis: 20%;
-        background-color: pink;
-        height: 75vh;
+        height: 65vh;
+        justify-content: center;
+        row-gap: 15px;
+        .info-card {
+            display: flex;
+            background-color: #FBFBFB;
+            align-items: center;
+            flex-basis: 100%;
+            padding: 0px 15px;
+            &:first-child > img {
+                background: rgba(255, 0, 0, 0.07);
+            }
+            &:nth-child(2) > img{
+                background: rgba(74, 184, 255, 0.07);
+            }
+            &:nth-child(3) > img{
+                background: rgba(249, 206, 35, 0.07);
+            }
+            &:nth-child(4) > img{
+                background: rgba(253, 81, 129, 0.07);
+            }
+            img {
+                padding: 20px;
+                width: auto;
+                height: 20px;
+                border-radius:  6px;
+            }
+            > div {
+                padding: 0 25px;
+                p:first-child {
+                    font-size:  1em;
+                    font-weight: bold;
+                    padding: 0;
+                    margin: 0;
+                }
+                p:nth-child(2){
+                    padding: 0;
+                    margin: 0;
+                    font-size: 0.8em;
+                }
+            }
+        }
     }
     .daily-graph {
         border-radius: 5px;
         flex-basis: 100%;
-        height: 300px !important;
+        height: 250px !important;
         background-color: #FBFBFB
         ;
     }
