added hook in profil.jsx for Api calls

--- a/sportsee/src/scss/pages/profile.scss
+++ b/sportsee/src/scss/pages/profile.scss
@@ -95,6 +95,9 @@
         background-color: red;
         flex-basis: 30%; 
         height: 250px !important;
+        .recharts-line-dot{
+            display: none;
+        }
     }
    .score-chart {
        border-radius:  5px;
