--- a/sportsee/src/scss/pages/profile.scss
+++ b/sportsee/src/scss/pages/profile.scss
@@ -1,13 +1,17 @@
 .main-profil {
+    overflow: hidden;
     display: flex;
-    margin-left: 200px;
+}
+.profilContent {
+    display: flex;
+    margin-left: 140px;
     margin-top: 30px;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 80%;
-    height: 80vh;
-    column-gap: 20px;
-    justify-content: space-between;
+    width: 90%;
+    height: 80%;
+    column-gap: 5px;
+    justify-content: space-around;
     > h1 {
         display: flex;
         flex-basis: 100%;
@@ -20,21 +24,24 @@
             padding-left: 15px;
         }
     }
+    > p {
+        flex-basis: 100%;
+    }
     .charts-container {
         margin-top: 30px;
         display: flex;
         flex-wrap: wrap;
-        height: 65vh;
+        height: 500px;
         flex-basis: 75%;
         justify-content: space-between;
-        row-gap: 35px;
+        row-gap: 20px;
     }
     .logo-list {
         margin-top: 30px;
         display: flex;
         flex-wrap: wrap;
-        flex-basis: 20%;
-        height: 65vh;
+        flex-basis: 7%;
+        height: 62vh;
         justify-content: center;
         row-gap: 15px;
         .info-card {
@@ -64,7 +71,7 @@
             > div {
                 padding: 0 25px;
                 p:first-child {
-                    font-size:  1em;
+                    font-size:  0.7em;
                     font-weight: bold;
                     padding: 0;
                     margin: 0;
@@ -81,29 +88,35 @@
         border-radius: 5px;
         flex-basis: 100%;
         height: 250px !important;
-        background-color: #FBFBFB
-        ;
+        background-color: #FBFBFB;
     }
     .perf-graph {
         border-radius: 5px;
-        flex-basis: 30%;
-        height: 250px !important; 
+        flex-basis: 33%;
+        height: 200px !important; 
         background-color: #282D30;         ;
     }
     .average-session {
         border-radius: 5px;
         background-color: red;
-        flex-basis: 30%; 
-        height: 250px !important;
+        flex-basis: 33%; 
+        height: 200px !important;
         .recharts-line-dot{
             display: none;
         }
     }
    .score-chart {
        border-radius:  5px;
-       height: 250px !important;
-       flex-basis: 30%;
+       height: 200px !important;
+       flex-basis: 25%;
        background-color: #FBFBFB;
    }
-    
+   .legend_text {
+       top: -20px;
+       left: -20px !important; 
+   }
+   .recharts-legend-wrapper {
+       position: relative;
+       top: 20px !important;
+   }
 }
